src/test/resources/rules/success/NoWhitespaceBefore.java
package rules.success;

public class NoWhitespaceBefore {
    public void method() {
        String hw = "Hello World";
        hw.lines();
    }
}
